external-projects/sui-prover/crates/sui-prover/tests/snapshots/spec_purity/spec_purity_event_module.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: Spec function is calling a network module
   ┌─ tests/inputs/spec_purity/spec_purity_event_module.move:30:9
   │
30 │         subcheck(x);
   │         ^^^^^^^^^^^
